# WaterShader

./: .gitignore  CMakeLists.txt  README.md  main.cpp
shaders/: frag.glsl  vert.glsl
